[project]
name = "google-genmedia-custom-nodes"
description = "A suite of experimental custom nodes that allows access to Google's 1P models like Veo, Imagen, Nano Banana, Gemini, Virtual-try-on, Lyria"
version = "1.0.0"
license = {file = "LICENSE"} 
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]

dependencies = ["# Copyright 2025 Google LLC", "#", "# Licensed under the Apache License, Version 2.0 (the \"License\");", "# you may not use this file except in compliance with the License.", "# You may obtain a copy of the License at", "#", "#      http://www.apache.org/licenses/LICENSE-2.0", "#", "# Unless required by applicable law or agreed to in writing, software", "# distributed under the License is distributed on an \"AS IS\" BASIS,", "# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.", "# See the License for the specific language governing permissions and", "# limitations under the License.", "# This is a preview version of Google GenAI custom nodes", "google-api-core==2.24.2", "google-cloud-aiplatform==1.111.0", "google-cloud-storage==2.19.0", "google-genai==1.46.0", "google-generativeai==0.8.5", "moviepy==2.2.1", "opencv-python-headless==4.11.0.86"]

[project.urls]
Repository = "https://github.com/GoogleCloudPlatform/comfyui-google-genmedia-custom-nodes"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/GoogleCloudPlatform/comfyui-google-genmedia-custom-nodes/wiki"
"Bug Tracker" = "https://github.com/GoogleCloudPlatform/comfyui-google-genmedia-custom-nodes/issues"

[tool.comfy]
PublisherId = ""
DisplayName = "comfyui-google-genmedia-custom-nodes"
Icon = ""
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

